--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "scripts": {
       "dev": "vite",
       "build": "vite build",
-      "start": "vite"
+      "preview": "vite preview"
     },
     "dependencies": {
       "axios": "^1.6.0",
@@ -19,6 +19,8 @@
       "autoprefixer": "^10.4.21",
       "postcss": "^8.5.6",
       "tailwindcss": "^3.4.13"
+    },
+    "engines": {
+      "node": "18.x"
     }
   }
-  
