--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
         "dotenv": "^16.0.0",
         "express": "^4.18.2",
         "express-session": "^1.18.2",
+        "serverless-http": "^3.2.0",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.0.0",
         "openai": "^4.0.0",
